--- a/app/src/main/res/layout-v21/fragment_accueil.xml
+++ b/app/src/main/res/layout-v21/fragment_accueil.xml
@@ -18,12 +18,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/large_taille"
-                android:layout_marginLeft="@dimen/petite_marge"
-                android:layout_marginRight="@dimen/petite_marge"
-                android:layout_marginTop="@dimen/tres_petite_marge"
-                app:cardCornerRadius="@dimen/tres_petite_marge"
-                app:cardElevation="@dimen/micro_petite_marge"
-                app:cardMaxElevation="@dimen/petite_marge">
+                android:layout_marginBottom="@dimen/petite_dimenssion_8">
                 <androidx.viewpager.widget.ViewPager
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -34,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/tres_petite_marge">
+                android:layout_marginBottom="@dimen/petite_dimenssion_8">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -50,7 +45,7 @@
                     android:layout_weight="1"
                     android:gravity="center|end"
                     android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                    android:drawableTint="@color/colorPrimaryDark"
+                    android:drawableTint="@color/design_default_color_error"
                     android:layout_gravity="center_vertical"
                     android:textSize="@dimen/tres_petite_police"
                     android:id="@+id/seeMore"
@@ -61,16 +56,15 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 android:id="@+id/recycleArtiste"
-                android:layout_margin="@dimen/micro_petite_marge"/>
+                android:layout_marginBottom="@dimen/petite_dimenssion_8"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/micro_petite_marge"
                 android:gravity="center">
                 <com.airbnb.lottie.LottieAnimationView
                     android:layout_width="50dp"
@@ -94,6 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"
+                android:layout_marginBottom="@dimen/petite_dimenssion_8"
                 android:id="@+id/recycleActualite"/>
             <ProgressBar
                 android:layout_width="@dimen/tres_grande_marge"
