--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,15 +17,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/line"
-            android:layout_margin="@dimen/petite_marge">
+            android:layout_marginBottom="@dimen/petite_dimenssion_8"
+            android:padding="@dimen/petite_dimenssion_2">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/petite_dimenssion_8">
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:layout_width="wrap_content"
-                    android:layout_height="155dp"
+                    android:layout_height="150dp"
                     android:id="@+id/wlcomImg"
                     android:adjustViewBounds="true"
                     app:lottie_rawRes="@raw/welcome"
@@ -33,17 +35,20 @@
                     app:lottie_loop="true"/>
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Bienvenue \ndans FlyZik"
                     android:layout_toRightOf="@id/wlcomImg"
                     android:textAppearance="?android:textAppearanceLarge"
                     android:textColor="@android:color/white"
-                    android:layout_centerInParent="true"
+                    android:layout_alignParentBottom="true"
                     android:fontFamily="@font/carter_one"
                     android:textSize="@dimen/grande_police"
-                    android:layout_marginStart="@dimen/tres_petite_marge"
-                    android:layout_marginBottom="@dimen/grande_marge"/>
+                    android:paddingLeft="@dimen/petite_dimenssion_2"
+                    android:paddingRight="@dimen/petite_dimenssion_2"
+                    android:paddingBottom="@dimen/petite_dimenssion_3"
+                    android:paddingTop="@dimen/petite_dimenssion_3"
+                    android:layout_marginStart="@dimen/tres_petite_marge"/>
             </RelativeLayout>
 
             <LinearLayout
@@ -51,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/lineEnvoie"
                 android:visibility="visible"
+                android:layout_marginBottom="@dimen/petite_dimenssion_8"
                 android:orientation="vertical">
 
                 <TextView
@@ -60,12 +66,12 @@
                     android:textAppearance="?android:textAppearanceLarge"
                     android:textColor="@android:color/white"
                     android:fontFamily="@font/carter_one"
-                    android:layout_marginStart="@dimen/tres_petite_marge"
-                    android:layout_marginBottom="@dimen/tres_grande_marge"/>
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/petite_taille"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     app:hintTextAppearance="?android:textAppearance"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:textColorHint="@android:color/white">
@@ -82,7 +88,7 @@
                         android:drawableStart="@drawable/ic_person_outline"
                         android:drawableTint="@android:color/white"
                         android:drawablePadding="@dimen/tres_petite_marge"
-                        android:fontFamily="@font/comfortaa"
+                        android:fontFamily="@font/ubuntu_mono"
                         tools:targetApi="m" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -92,17 +98,17 @@
                     android:layout_height="@dimen/petite_taille"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:layout_marginBottom="@dimen/tres_petite_marge"
-                    android:layout_marginTop="@dimen/tres_petite_marge"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     android:orientation="horizontal">
 
                     <com.hbb20.CountryCodePicker
                         android:id="@+id/ccpCode"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:textColor="@android:color/white"
                         app:ccpDialog_textColor="@android:color/white"
-                        android:layout_width="wrap_content"
+                        app:ccp_contentColor="@android:color/white"
+                        app:ccp_arrowColor="@android:color/white"
+                        android:layout_width="100dp"
                         android:layout_height="match_parent"
                         app:ccp_defaultNameCode="CG"  />
 
@@ -125,7 +131,7 @@
                             android:drawableStart="@drawable/ic_phone"
                             android:drawableTint="@android:color/white"
                             android:drawablePadding="@dimen/tres_petite_marge"
-                            android:fontFamily="@font/comfortaa"
+                            android:fontFamily="@font/ubuntu_mono"
                             tools:targetApi="m" />
                     </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
@@ -134,9 +140,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/petite_taille"
                     android:text="@string/etes_vous_artiste"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     android:textColor="@android:color/white"
                     android:textAppearance="?android:textAppearance"
-                    android:fontFamily="@font/comfortaa_light"
+                    android:fontFamily="@font/ubuntu_mono"
                     android:id="@+id/statementArtiste"/>
 
                 <LinearLayout
@@ -151,6 +158,7 @@
                         android:layout_height="@dimen/petite_taille"
                         app:hintTextAppearance="?android:textAppearance"
                         android:hint="@string/nom_d_artiste"
+                        android:layout_marginBottom="@dimen/petite_dimenssion_8"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:textColorHint="@color/colorTxt">
 
@@ -171,7 +179,8 @@
                     </com.google.android.material.textfield.TextInputLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/petite_taille">
+                        android:layout_height="@dimen/petite_taille"
+                        android:layout_marginBottom="@dimen/petite_dimenssion_8">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -194,10 +203,7 @@
                     app:cardElevation="@dimen/petite_marge"
                     app:cardMaxElevation="@dimen/normale_marge"
                     android:id="@+id/btnRegister"
-                    android:layout_marginLeft="@dimen/tres_petite_marge"
-                    android:layout_marginRight="@dimen/tres_petite_marge"
-                    android:layout_marginTop="@dimen/moyenne_marge"
-                    android:layout_marginBottom="@dimen/moyenne_marge">
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -230,9 +236,9 @@
                     android:textAppearance="?android:textAppearance"
                     android:fontFamily="@font/carter_one"
                     android:gravity="center"
-                    android:layout_margin="@dimen/tres_petite_marge"
                     android:textAllCaps="true"
                     android:textSize="@dimen/tres_grande_police"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"/>
 
@@ -241,10 +247,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="un code vous sera envoyé par message"
-                    android:layout_margin="@dimen/tres_petite_marge"
                     android:textAppearance="?android:textAppearance"
                     android:fontFamily="@font/carter_one"
                     android:gravity="center"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"/>
 
@@ -252,7 +258,9 @@
                     android:id="@+id/pinView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearance"
                     style="@style/PinWidget.PinView"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     app:itemCount="6"
                     android:gravity="center"
                     app:itemHeight="50dp"
@@ -274,12 +282,9 @@
                     app:cardBackgroundColor="@color/c5"
                     app:cardCornerRadius="@dimen/grande_marge"
                     app:cardElevation="@dimen/petite_marge"
+                    android:layout_marginBottom="@dimen/petite_dimenssion_8"
                     app:cardMaxElevation="@dimen/normale_marge"
-                    android:id="@+id/btnVerification"
-                    android:layout_marginLeft="@dimen/tres_petite_marge"
-                    android:layout_marginRight="@dimen/tres_petite_marge"
-                    android:layout_marginTop="@dimen/moyenne_marge"
-                    android:layout_marginBottom="@dimen/moyenne_marge">
+                    android:id="@+id/btnVerification">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
