--- a/app/src/main/res/layout/item_top.xml
+++ b/app/src/main/res/layout/item_top.xml
@@ -2,52 +2,96 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:id="@+id/lineGenre"
-    android:layout_margin="@dimen/micro_petite_marge"
-    android:layout_height="@dimen/petite_taille">
+    android:layout_marginBottom="@dimen/petite_dimenssion_8"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingTop="@dimen/petite_dimenssion_3"
+        android:paddingBottom="@dimen/petite_dimenssion_3"
+        android:paddingLeft="@dimen/petite_dimenssion_2"
+        android:paddingRight="@dimen/petite_dimenssion_2"
         android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="50dp"
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="@dimen/petite_taille"
+            android:layout_height="@dimen/petite_taille"
             android:layout_gravity="center"
             android:gravity="center"
-            android:background="@drawable/form_raduis_right"
-            android:layout_height="match_parent">
-            <TextView
+            android:layout_marginRight="@dimen/petite_dimenssion_5"
+            app:cardCornerRadius="@dimen/tres_petite_marge">
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:layout_weight="1"
-                android:textSize="9sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
-                android:textAppearance="?android:textAppearance"
-                android:id="@+id/txtNum"
-                tools:ignore="RtlCompat" />
-        </LinearLayout>
-        <TextView
+                android:id="@+id/imgAlbum"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_background"/>
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="textStart"
-            android:padding="@dimen/micro_petite_marge"
-            android:gravity="center_vertical"
-            android:text="@string/app_name"
-            android:layout_weight="1"
-            android:textColor="@android:color/white"
-            android:textAppearance="?android:textAppearance"
-            android:id="@+id/txtTitre"
-            tools:ignore="RtlCompat" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="@dimen/petite_dimenssion_5"
+            android:layout_gravity="center"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/app_name"
+                android:maxLines="1"
+                android:textSize="@dimen/petite_police"
+                android:textAppearance="?android:textAppearance"
+                android:fontFamily="@font/carter_one"
+                android:id="@+id/txtTitre"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/app_name"
+                android:maxLines="1"
+                android:visibility="visible"
+                android:textSize="@dimen/tres_petite_police"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:fontFamily="@font/ubuntu_mono_bold"
+                android:id="@+id/txtArtiste"/>
+
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/petite_dimenssion_5"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tint="@android:color/white"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/volume_low"
+                android:visibility="visible"
+                android:textAppearance="?android:textAppearance"
+                android:textSize="@dimen/tres_petite_police"
+                android:gravity="center"
+                android:fontFamily="@font/ubuntu_mono"
+                android:paddingTop="@dimen/petite_dimenssion_2"
+                android:paddingBottom="@dimen/petite_dimenssion_2"
+                android:paddingLeft="@dimen/petite_dimenssion_3"
+                android:paddingRight="@dimen/petite_dimenssion_3"
+                android:id="@+id/txtNum"/>
+
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_weight="1"
-        android:background="@android:color/white"/>
 </LinearLayout>
