--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -7,8 +7,8 @@
         app:showAsAction="always"
         android:icon="@drawable/ic_mode_edit_black_24dp"/>
     <item
-        android:title="@string/partager"
+        android:title="@string/ajouter_une_chanson"
         android:id="@+id/partager"
         app:showAsAction="always"
-        android:icon="@drawable/ic_share_black_24dp"/>
+        android:icon="@drawable/ic_add_black_24dp"/>
 </menu>
