--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,5 +38,18 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
 
+    <dimen name="petite_dimenssion_1">2dp</dimen>
+    <dimen name="petite_dimenssion_2">3dp</dimen>
+    <dimen name="petite_dimenssion_3">6dp</dimen>
+    <dimen name="petite_dimenssion_4">8dp</dimen>
+    <dimen name="petite_dimenssion_5">10dp</dimen>
+    <dimen name="petite_dimenssion_6">12dp</dimen>
+    <dimen name="petite_dimenssion_7">14dp</dimen>
+    <dimen name="petite_dimenssion_8">16dp</dimen>
+    <dimen name="petite_dimenssion_9">18dp</dimen>
+    <dimen name="petite_dimenssion_10">36dp</dimen>
+
+    <dimen name="petite_police_1">13sp</dimen>
+
 
 </resources>
