--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/c4</item>
         <item name="colorPrimaryDark">@color/colorbtn</item>
         <item name="colorAccent">@color/c2</item>
-        <item name="android:fontFamily">@font/ubuntu_mono_bold</item>
+        <item name="android:fontFamily">@font/carter_one</item>
         <item name="pinViewStyle">@style/PinWidget.PinView</item>
     </style>
 
