compression des images terminer

--- a/app/src/main/res/layout/activity_add_photo.xml
+++ b/app/src/main/res/layout/activity_add_photo.xml
@@ -14,6 +14,7 @@
         app:titleTextAppearance="?android:textAppearance"
         app:titleTextColor="@android:color/white" />
     <ImageView
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/add_picture"
