--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -60,6 +60,7 @@
                         android:src="@drawable/ic_camera_alt_black_24dp"
                         android:layout_alignParentEnd="true"
                         android:id="@+id/addImg"
+                        android:visibility="gone"
                         app:tint="@android:color/white"
                         android:layout_alignParentBottom="true"
                         android:backgroundTint="@color/common_google_signin_btn_text_light_pressed"/>
