--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -11,7 +11,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingRight="@dimen/petite_dimenssion_3"
+        android:paddingLeft="@dimen/petite_dimenssion_3"
+        android:paddingBottom="@dimen/petite_dimenssion_2"
+        android:paddingTop="@dimen/petite_dimenssion_2">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,12 +32,14 @@
                 android:layout_width="@dimen/grande_marge"
                 android:layout_height="@dimen/grande_marge"
                 android:id="@+id/fab"
+                android:tint="@android:color/white"
                 android:src="@drawable/ic_play_circle_outline_black_24dp"
                 android:layout_centerInParent="true"/>
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnClose"
+                android:tint="@android:color/white"
                 android:src="@drawable/ic_close_black_24dp"
                 android:background="@android:color/transparent"/>
 
@@ -45,9 +51,12 @@
             android:orientation="vertical"
             android:layout_centerHorizontal="true"
             android:id="@+id/lineBottom"
+            android:paddingRight="@dimen/petite_dimenssion_3"
+            android:paddingLeft="@dimen/petite_dimenssion_3"
+            android:paddingBottom="@dimen/petite_dimenssion_2"
+            android:paddingTop="@dimen/petite_dimenssion_2"
             android:layout_gravity="center"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/micro_petite_marge">
+            android:layout_alignParentBottom="true">
 
             <TextView
                 android:layout_width="match_parent"
@@ -55,7 +64,8 @@
                 android:layout_gravity="center"
                 android:text="@string/app_name"
                 android:textSize="10sp"
-                android:textColor="@color/colorBtn"
+                android:maxLines="1"
+                android:textColor="@android:color/white"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:fontFamily="@font/comfortaa_bold"
                 android:id="@+id/txtTitre"/>
@@ -66,6 +76,7 @@
                 android:layout_gravity="center"
                 android:text="@string/app_name"
                 android:textSize="8sp"
+                android:visibility="gone"
                 android:textColor="@color/colorMenu"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:fontFamily="@font/comfortaa_light"
